@@ -1,6 +1,7 @@
 - urpmi:
   o fix displaying "bad signature" in non-utf8 (#44587)
 - gurpmi:
+  o overall progress-bar, display the download speed, nicer looking
   o [bugfix for 6.15] re-allow to continue on bad signature
 
 Version 6.15 - 7 October 2008
